added deposit tax category

--- a/src/Resources/translations/messages.de.yml
+++ b/src/Resources/translations/messages.de.yml
@@ -4,5 +4,6 @@ gweb_deposit:
             menu: Pfand
             tab: Pfand
             price: Pfandpreis
+            tax_category: Pfand Steuerkategorie
     ui:
         deposit: 'zzgl. Pfand:'
