--- a/src/Resources/translations/messages.en.yml
+++ b/src/Resources/translations/messages.en.yml
@@ -4,5 +4,6 @@ gweb_deposit:
             menu: Deposit
             tab: Deposit
             price: Deposit fee
+            tax_category: Categoría de impuesto de depósito
     ui:
         deposit: 'excl. deposit:'
