--- a/src/Resources/translations/messages.es.yml
+++ b/src/Resources/translations/messages.es.yml
@@ -6,4 +6,5 @@ gweb_deposit:
             price: Precio de depósito
             tax_category: Categoría de impuesto de depósito
     ui:
-        deposit: 'más depósito:'
+        deposit-excl: 'más depósito:'
+        deposit-free: 'depósito libre'
